# zendell

./: .gitignore  README.md  _state.json  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
zendell/: main.py
zendell/agents/: activity_collector.py  analyzer.py  clarifier.py  communicator.py  conversation_analyzer.py  goal_finder.py  orchestrator.py  recommender.py
zendell/config/: config_ui.py  settings.py
zendell/core/: db.py  db_models.py  graph.py  memory_manager.py  utils.py
zendell/services/: discord_service.py  llm_provider.py
zendell/tests/: test_agents.py  test_db.py  test_integration.py  test_services.py
