[project]
name = "zendell"
version = "0.1.0"
description = "zendell assistant"
authors = [
    { name = "twynzen", email = "razzziel001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<4.0"  
dependencies = ["langgraph (>=0.2.61,<0.3.0)", "langchain-openai (>=0.2.14,<0.3.0)", "python-dotenv (>=1.0.1,<2.0.0)", "langgraph-cli[inmem] (>=0.1.65,<0.2.0)", "fastapi[standard] (>=0.115.6,<0.116.0)", "uvicorn (>=0.34.0,<0.35.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
